crear la informacion del documento html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <th>Documentacion</th>
         </thead>
         <tbody>
-            
+            <tr>
+                <td>html</td>
+                <td>represent the root of the document</td>
+                <td><a href="https://developer.mozilla.org/es/docs/Web/HTML/Element/a">DOCUMENTACION</a></td>
+            </tr>
         </tbody>
     </table>
 
